# Haskell-Chess

./: .gitignore  README.md  chess.cabal  stack.yaml
.stack-work/install/c4f366b8/flag-cache/: chess-0.1.0.0
chess/: chess.cabal
chess/.stack-work/ghci/6794d3c6/: cabal_macros.h
chess/.stack-work/install/c4f366b8/flag-cache/: chess-0.1.0.0
chess/src/: ChessBoard.hs  Main.hs
src/: ChessBoard.hs  Main.hs
