name:                chess
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/chess#readme
license:             BSD3
license-file:        LICENSE
author:              Paul Abers
maintainer:          p.public@protonmail.com
copyright:           2020 Paul Abers
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable chess
  hs-source-dirs:      src
  other-modules:       ChessBoard
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
